<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="fragment_container" type="id"/>

    <item name="email" type="id"/>
    <item name="password" type="id"/>
    <item name="submit" type="id"/>

</resources>